# GLM_VortexGPU_Backend

./: .gitignore  CLAUDE.md  README.md  Vortex GPU Audio – 前端项目规范.md  Vortex_GPU_Audio_Backend_Spec.md
.github/workflows/: ci.yml
.specify/memory/: constitution.md
specs/001-vortex-backend/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-vortex-backend/checklists/: requirements.md
specs/001-vortex-backend/contracts/: api.yaml  websocket.proto
vortex-backend/: BUILD_WINDOWS.md  CMakeLists.txt  Cargo.toml  Dockerfile  README_SETUP.md  RUN_GUIDE.md  RUN_NOW.md  build_windows.bat  check_environment.py  check_windows_env.bat  diagnose_docker_network.bat  docker-compose-cn.yml  docker-compose-simple.yml  docker-compose.yml  quick_start.md  run_simple_server.py  setup-offline-docker.md  start_server.py  stop_server.bat  stop_server.py  verify_docker_local.bat  使用说明.md
vortex-backend/config/gpu/: cuda_config.json
vortex-backend/include/: audio_types.hpp  network_types.hpp  vortex_api.hpp
vortex-backend/include/core/: audio_buffer_manager.hpp  audio_engine.hpp  audio_processor.hpp  processing_chain.hpp  progress_tracker.hpp
vortex-backend/include/core/audio/: audio_export_import.hpp  audio_routing.hpp  device_manager.hpp  multi_channel_engine.hpp  session_manager.hpp
vortex-backend/include/core/dsp/: dsd_processor.hpp  dynamic_range_processor.hpp  frequency_domain_effects.hpp  realtime_effects_chain.hpp  spatial_audio_processor.hpp  spectrum_analyzer.hpp  time_domain_effects.hpp  vr_audio_processor.hpp  vu_meter.hpp  waveform_processor.hpp
vortex-backend/include/core/fileio/: audio_file_loader.hpp  format_detector.hpp
vortex-backend/include/core/gpu/: cuda_kernels.hpp  gpu_processor.hpp  memory_manager.hpp
vortex-backend/include/core/processing/: adaptive_audio_processor.hpp  processing_metrics_collector.hpp
vortex-backend/include/hardware/: gpu_utilization_tracker.hpp  hardware_monitor.hpp
vortex-backend/include/network/: audio_discovery.hpp  audio_quality_manager.hpp  audio_streaming_protocol.hpp  audio_synchronization.hpp  device_registry.hpp  realtime_streaming.hpp  subscription_manager.hpp  time_synchronization.hpp
vortex-backend/include/network/protocol/: binary_protocol.hpp  visualization_protocol.hpp
vortex-backend/scripts/setup/: setup_gpu_environment.ps1  setup_gpu_environment.sh  verify_gpu_setup.sh
vortex-backend/shaders/: processing_metrics.comp  spectrum_analyzer.comp  waveform_analyzer.comp
vortex-backend/src/: main.cpp
vortex-backend/src/core/: audio_buffer_manager.cpp  audio_engine.cpp  audio_engine.hpp  audio_processor.cpp  processing_chain.cpp  progress_tracker.cpp
vortex-backend/src/core/audio/: audio_routing.cpp  device_manager.cpp  multi_channel_engine.cpp  session_manager.cpp
vortex-backend/src/core/dsp/: convolution.cpp  convolution.hpp  dsd_processor.cpp  dynamic_range_processor.cpp  equalizer.cpp  equalizer.hpp  frequency_domain_effects.cpp  realtime_effects_chain.cpp  spatial_audio_processor.cpp  spectrum_analyzer.cpp  spectrum_analyzer.hpp  time_domain_effects.cpp  vr_audio_processor.cpp  vu_meter.cpp  waveform_processor.cpp
vortex-backend/src/core/fileio/: audio_file_loader.cpp  audio_file_loader.hpp  format_detector.cpp  format_detector.hpp  metadata_extractor.hpp
vortex-backend/src/core/fileio/decoders/: aac_decoder.cpp  aac_decoder.hpp  alac_decoder.cpp  alac_decoder.hpp  dff_decoder.cpp  dff_decoder.hpp  dsd1024_decoder.cpp  dsd1024_decoder.hpp  dsd128_decoder.cpp  dsd128_decoder.hpp  dsd64_decoder.cpp  dsd64_decoder.hpp  dsf_decoder.cpp  flac_decoder.cpp  flac_decoder.hpp  m4a_decoder.cpp  m4a_decoder.hpp  mp3_decoder.cpp  mp3_decoder.hpp  ogg_decoder.cpp  ogg_decoder.hpp  wav_decoder.cpp  wav_decoder.hpp
vortex-backend/src/core/gpu/: cuda_kernels.cu  gpu_processor.cpp  gpu_processor.hpp  memory_manager.cpp  memory_manager.hpp
vortex-backend/src/core/processing/: adaptive_audio_processor.cpp  processing_chain.cpp  processing_chain.hpp  processing_metrics_collector.cpp
vortex-backend/src/hardware/: gpu_utilization_tracker.cpp  hardware_monitor.cpp
vortex-backend/src/network/: audio_discovery.cpp  audio_quality_manager.cpp  audio_streaming_protocol.cpp  audio_synchronization.cpp  device_registry.cpp  lib.rs  realtime_streaming.cpp  realtime_websocket.hpp  rust_main.rs  subscription_manager.cpp
vortex-backend/src/network/http_endpoints/: audio_upload.cpp  audio_upload.hpp
vortex-backend/src/network/protocol/: binary_protocol.cpp  visualization_protocol.cpp
vortex-backend/src/network/rust/: Cargo.toml
vortex-backend/src/network/rust/benches/: network_benchmarks.rs  performance_benchmarks.rs
vortex-backend/src/network/rust/src/: http_server.rs  lib.rs  websocket_server.rs
vortex-backend/src/network/rust/src/protocol/: binary.rs  websocket.rs
vortex-backend/src/network/rust/tests/: contract_tests.rs  integration_tests.rs  unit_tests.rs
vortex-backend/src/network/rust/tests/common/: mod.rs
vortex-backend/src/output/: hqplayer_naa.cpp  hqplayer_naa.hpp  output_manager.cpp  output_manager.hpp  roon_bridge.cpp  roon_bridge.hpp  upnp_renderer.cpp  upnp_renderer.hpp
vortex-backend/src/utils/: config_manager.hpp  logger.hpp
vortex-backend/tests/: audio_test_harness.cpp  audio_test_harness.hpp
vortex-backend/tests/contract/: test_audio_upload.cpp  test_websocket_realtime.cpp
vortex-backend/tests/e2e/: test_complete_pipeline.cpp
vortex-backend/tests/integration/: test_dsd_processing.cpp  test_gpu_acceleration.cpp  test_new_components_integration.cpp  test_websocket_protocol.cpp
vortex-backend/tests/performance/: test_file_processing.cpp  test_realtime_constraints.cpp  test_visualization_fps.cpp
vortex-backend/tests/unit/: test_audio_engine.cpp  test_audio_engine_with_harness.cpp  test_convolution.cpp  test_equalizer.cpp  test_format_detector.cpp  test_gpu_processor.cpp  test_hqplayer_naa.cpp  test_network_protocol.cpp  test_output_manager.cpp  test_processing_chain.cpp  test_roon_bridge.cpp  test_spectrum_analyzer.cpp  test_upnp_renderer.cpp
